--- a/templates/search.html
+++ b/templates/search.html
@@ -7,9 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/category.css">
     <link rel="icon" type="image/png" href="../static/tea8.png">
-    <title>Search</title>
+    <link rel="stylesheet" href="../css/saerch.css">
+    <title>Search Results</title>
 </head>
 
 <body>
@@ -52,7 +52,30 @@
           </nav>
       
     <!-- Content: Sari and Zeinab -->
-    <h1 id="search-title">Search Results</h1>
+    <h1 id="search-title" class="mt-3">Search Results</h1>
+    
+    <!-- Add filter options -->
+    <div class="filter-container">
+        <div class="filter-box">
+            <a href="#" class="btn active" data-filter="all">ALL</a>
+            <a href="#" class="btn" data-filter="greentea">GREEN TEA</a>
+            <a href="#" class="btn" data-filter="blacktea">BLACK TEA</a>
+            <a href="#" class="btn" data-filter="whitetea">WHITE TEA</a>
+            <a href="#" class="btn" data-filter="herbaltea">HERBAL TEA</a>
+            <a href="#" class="btn" data-filter="matchablends">MATCHA BLENDS</a>
+            <a href="#" class="btn" data-filter="rooiboshoneybush">ROOIBOS & HONEY BUSH</a>
+            <a href="#" class="btn" data-filter="fruitblends">FRUIT BLENDS</a>
+            <a href="#" class="btn" data-filter="premiumoolong">PREMIUM OOLONG</a>
+        </div>
+        <div class="price-range-section">
+            <label for="min-price">Min Price:</label>
+            <input type="number" id="min-price" placeholder="0" min="0" max="49">
+            <label for="max-price">Max Price:</label>
+            <input type="number" id="max-price" placeholder="50" max="50" min="1">
+            <button id="filter-price" class="btn">Filter by Price</button>
+        </div>
+    </div>
+
     <div class="product-grid" id="search-results"></div>
 
     <!-- Footer -->
@@ -94,5 +117,4 @@
     <script src="../js/search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-
 </html>
