--- a/templates/search.html
+++ b/templates/search.html
@@ -58,14 +58,14 @@
     <div class="filter-container">
         <div class="filter-box">
             <a href="#" class="btn active" data-filter="all">ALL</a>
-            <a href="#" class="btn" data-filter="greentea">GREEN TEA</a>
-            <a href="#" class="btn" data-filter="blacktea">BLACK TEA</a>
-            <a href="#" class="btn" data-filter="whitetea">WHITE TEA</a>
-            <a href="#" class="btn" data-filter="herbaltea">HERBAL TEA</a>
-            <a href="#" class="btn" data-filter="matchablends">MATCHA BLENDS</a>
-            <a href="#" class="btn" data-filter="rooiboshoneybush">ROOIBOS & HONEY BUSH</a>
-            <a href="#" class="btn" data-filter="fruitblends">FRUIT BLENDS</a>
-            <a href="#" class="btn" data-filter="premiumoolong">PREMIUM OOLONG</a>
+            <a href="#" class="btn" data-filter="GREEN TEA">GREEN TEA</a>
+            <a href="#" class="btn" data-filter="BLACK TEA">BLACK TEA</a>
+            <a href="#" class="btn" data-filter="WHITE TEA">WHITE TEA</a>
+            <a href="#" class="btn" data-filter="HERBAL TEA">HERBAL TEA</a>
+            <a href="#" class="btn" data-filter="MATCHA BLENDS">MATCHA BLENDS</a>
+            <a href="#" class="btn" data-filter="ROOIBOS & HONEY BUSH">ROOIBOS & HONEY BUSH</a>
+            <a href="#" class="btn" data-filter="FRUIT BLENDS">FRUIT BLENDS</a>
+            <a href="#" class="btn" data-filter="PREMIUM OOLONG">PREMIUM OOLONG</a>
         </div>
         <div class="price-range-section">
             <label for="min-price">Min Price:</label>
