--- a/templates/item_view.html
+++ b/templates/item_view.html
@@ -119,6 +119,8 @@
   <script src="../js/index.js"></script> <!-- Always add the index js and css files -->
   <script src="../js/item.js"></script>
   <script src="../js/cart.js"></script>
+  <script src="../js/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 <footer class="mt-4">
   <div class="container1">
