--- a/css/Item.css
+++ b/css/Item.css
@@ -1,4 +1,3 @@
-/* CSS Color Pallette */
 :root {
   --cambridge-blue: #8aa387;
   --beige: #f5f5dc;
@@ -17,7 +16,7 @@ body {
 
 p {
   color: #555;
-  line-height: 1.6;
+  line-height: 1.3;
 }
 
 .Item-pic-price {
@@ -33,14 +32,14 @@ p {
 
 
 #teaImage img {
-  width: 300px;
+  width: 350px;
   height: auto;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
 #teaImage img:hover{
-  width: 350px;
+  width: 380px;
   transition: 0.3s ease-in-out;
 }
 #teaImage img:not(:hover){
@@ -65,7 +64,7 @@ p {
 #priceForm {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .size-input, .quantity-input {
@@ -100,66 +99,46 @@ p {
 .favorite-add-btn button:hover {
   background-color: #8aa387;
 }
+#teaName{
+  font-size: 1.5em;
+}
 
 .description {
-  padding: 10px;
+  padding: 5px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   margin: 20px;
   border-radius: 8px;
   font-size: 0.9em;
+  text-align : left;
 }
 
 .description h5 {
   margin-bottom: 5px;
   color: #a68a64;
-  font-size: 1.3em;
+  font-size: 1.8em;
+  padding-left: 15px;
 }
 
 .description p {
-  margin: 5px 0;
-  line-height: 1.4;
-  font-size: 1.1em;
+  margin: 10px 0;
+  line-height: 1.1;
+  font-size: 1.5em;
+  padding-left: 30px;
+  
 }
 
-/* Updated teaBenefits section */
-#teaBenefits {
-  display: block; /* Removed flex display */
-  text-align: center; /* Center align text */
-  margin-top: 10px;
+#teaBenefits{
+  font-size: 1em;
+  padding-left: 3px;
+
 }
-
-.description ul {
-  font-size: 19px;
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  }
-
-
-
-.description h5 {
-  font-size: 30px;
-  font-weight: 550;
-  margin: 0;
-  padding-top: 20px;
-  padding-bottom: 15px;
-}
-
-.description p{
-  font-size: 19px;
-  margin: 10px;
-}
-
-.description {
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .recommended {
+  padding: 5px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  margin: 20px;
+  border-radius: 8px;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
